# aoc2024

./: .gitignore  Cargo.toml  README.md  aoc_helper.py  rustfmt.toml
benches/: benchmark.rs
src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs  main.rs
src/ds/: graph.rs
src/util/: graph.rs  grid.rs  integer.rs  io.rs  parse.rs  trie.rs
src/y2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs
